--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Shen Jinhao"
-  avatar           : "sjh_white.png"
+  avatar           : "sjh_ms.jpg"
   bio              : # "Graduate at Northwestern Polytechnical University"
   location         : "Xi'an, China"
   employer         :
