--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Jinhao Shen / 沈金昊"
+title                    : "沈金昊 / Shen Jinhao's Homepage"
 title_separator          : "-"
 name                     : &name "Jinhao Shen"
 description              : &description "Welcome to my webpage!"
