--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,16 +1,13 @@
 # main links links
 main:
-  # - title: "Research"
-  #   url: /research/
+  - title: "Research"
+    url: /research/
 
-  # - title: "About Me"
-  #   url: /about_me/
+  - title: "About Me"
+    url: /about_me/
 
-  # - title: "Imperial Maths Competition"
-  #   url: /imperial_maths_competition/
-
-  # - title: "Contact"
-  #   url: /contact/
+  - title: "Contact"
+    url: /contact/
 
 #  - title: "Talks"
 #    url: /talks/    
