Update author location from Xi'an to Hong Kong

--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Shen Jinhao"
   avatar           : "sjh_ms.jpg"
   bio              : # "Graduate at Northwestern Polytechnical University"
-  location         : "Xi'an, China"
+  location         : "Hong Kong, China"
   employer         :
   pubmed           : #
   googlescholar    : "https://scholar.google.com/citations?user=tBMK99AAAAAJ"
